fix(ui): fix mobile bottom padding cut off on settings modal

--- a/components/views/settings/modal/Modal.less
+++ b/components/views/settings/modal/Modal.less
@@ -108,6 +108,7 @@ p {
 
     .ps {
       padding-top: @normal-spacing * 3;
+      padding-bottom: @normal-spacing * 4;
       width: 100%;
     }
   }
